# practica-1-pvcxx

./: .CMakeLists.txt.un~  .gitignore  .main.cpp.un~  CMakeLists.txt  Makefile  README.md  game.cpp  game.js  game.wasm  main.cpp
extra/basic_01/: basic_01.cpp  basic_01.html  basic_01.js  basic_01.wasm
extra/basic_02/: basic_02.cpp  basic_02.html  basic_02.js  basic_02.wasm
extra/basic_03/: basic_03.cpp  basic_03.html  basic_03.js  basic_03.wasm
extra/basic_04/: basic_04.cpp  basic_04.html  basic_04.js  basic_04.wasm
include/: Bola.hpp  Juego.hpp  Jugador.hpp  Misc.hpp  WindowRenderer.hpp  texturas.hpp
src/: Bola.cpp  Juego.cpp  Jugador.cpp  Misc.cpp  WindowRenderer.cpp  texturas.cpp
src/class/: Ball.hpp  Blocks.hpp  Context.hpp  Paddle.hpp
src/enum/: State.hpp
src/functions/: Consts.hpp  Utils.hpp
